# comfyUI-Realtime-Lora-Plus

./: .gitignore  LICENSE  README.md  __init__.py  config_template.py  lora_analyzer.py  musubi_qwen_image_edit_lora_trainer.py  musubi_qwen_image_lora_trainer.py  musubi_wan_lora_trainer.py  musubi_zimage_config_template.py  musubi_zimage_lora_trainer.py  pyproject.toml  realtime_lora_trainer.py  requirements.txt  sdxl_config_template.py  sdxl_lora_trainer.py  selective_lora_loader.py
scripts/: self_test_musubi_zimage.py
web/js/: dynamic_inputs.js
workflows/: Lora Analysis and Block Control Demo - Z-Image.json  Qwen image Edit with Control images pairs.json  Qwen image and Qwen image edit 2509 Lora.json  Wan2.2 Combo Mode_MUSUBI-TUNER-VERSION.json  Wan2.2 High Noise_MUSUBI-TUNER-VERSION.json  Wan2.2 Low Noise_MUSUBI-TUNER-VERSION.json  Z-ImageTurbo_MUSUBI-TUNER-VERSION.json
